--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,3 +1,5 @@
+@import "~bootstrap-icons/font/bootstrap-icons.css";
+
 .card-normal {
     cursor: pointer;
     padding: 10px !important;
@@ -31,7 +33,7 @@
 }
 
 .products {
-    min-height: 300px;
+    min-height: 200px;
     position: relative;
 }
 
@@ -84,4 +86,34 @@
     padding: 3px;
     border-radius: 3px;
     line-height: 1;
+}
+
+.ng-select.custom ::ng-deep .ng-dropdown-panel {
+
+    margin-top: 15px;
+    margin-left: -10px;
+    color: #66615b;
+    background-color: white;
+    opacity: 0;
+    border: 1px solid #66615b;
+    border-right: none;
+    box-shadow: 1px 1px 1px black;
+}
+
+.ng-select.custom ::ng-deep .ng-dropdown-panel ::ng-deep .ng-option {
+    padding-bottom: 5px;
+
+    :hover {
+        color: white;
+        background-color: #fd7e14;
+    }
+}
+
+.ng-select.custom ::ng-deep .ng-dropdown-panel ::ng-deep .ng-option .ng-option-label {
+    display: block;
+    padding-left: 5px;
+}
+
+.ng-select.custom ::ng-deep .ng-clear {
+    font-size: 26px;
 }
